Template Changes made

--- a/BBWebProject/BBWebProject/Pages/HomePages/Service.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Service.cshtml
@@ -60,29 +60,29 @@
                         <a href="/Index" class="nav-item nav-link active">Home</a>
                         <a href="/HomePages/About" class="nav-item nav-link">About</a>
                         <a href="/HomePages/Service" class="nav-item nav-link">Service</a>
-                        <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a>
+                        @* <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a> *@
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
                             <div class="dropdown-menu m-0">
-                                <a href="/HomePages/Booking" class="dropdown-item">Booking</a>
-                                <a href="/HomePages/OurTeam" class="dropdown-item">Our Team</a>
-                                <a href="/HomePages/Testimonial" class="dropdown-item">Testimonial</a>
+                                <a href="/HomePages/Service" class="dropdown-item">Pizza</a>
+                                <a href="#" class="dropdown-item">Burger</a>
+                                <a href="#" class="dropdown-item">Zinger Burger</a>
                             </div>
                         </div>
                         <a href="/HomePages/Contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Place Order</a>
                 </div>
             </nav>
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Pizza</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Service</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Pizza</li>
                         </ol>
                     </nav>
                 </div>
@@ -93,19 +93,94 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Our Services</h5>
-                    <h1 class="mb-5">Explore Our Services</h1>
+                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Our Foods</h5>
+                    <h1 class="mb-5">Explore Our Food</h1>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
-                                <h5>Master Chefs</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
+                        <div class="service-item rounded pt-1">
+                            <div class="p-3">
+                                @* <i class="fa fa-3x fa-user-tie text-primary mb-4"></i> *@
+                                <i class="fa fa-3x fa-pizza-slice text-primary mb-4"></i>
+                                <h5>Fojita Pizza</h5>
+                                <p>This is Our Special Fojita Pizza</p>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Regular</th>
+                                            <th>Large</th>
+                                            <th>Medium</th>
+                                            <th>Small</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1300RS</td>
+                                            <td>1500RS</td>
+                                            <td>1000RS</td>
+                                            <td>800RS</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
+                        <div class="service-item rounded pt-1">
+                            <div class="p-3">
+                                @* <i class="fa fa-3x fa-user-tie text-primary mb-4"></i> *@
+                                <i class="fa fa-3x fa-pizza-slice text-primary mb-4"></i>
+                                <h5>Fojita Pizza</h5>
+                                <p>This is Our Special Fojita Pizza</p>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Regular</th>
+                                            <th>Large</th>
+                                            <th>Medium</th>
+                                            <th>Small</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1300RS</td>
+                                            <td>1500RS</td>
+                                            <td>1000RS</td>
+                                            <td>800RS</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
+                        <div class="service-item rounded pt-1">
+                            <div class="p-3">
+                                @* <i class="fa fa-3x fa-user-tie text-primary mb-4"></i> *@
+                                <i class="fa fa-3x fa-pizza-slice text-primary mb-4"></i>
+                                <h5>Fojita Pizza</h5>
+                                <p>This is Our Special Fojita Pizza</p>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Regular</th>
+                                            <th>Large</th>
+                                            <th>Medium</th>
+                                            <th>Small</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1300RS</td>
+                                            <td>1500RS</td>
+                                            <td>1000RS</td>
+                                            <td>800RS</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>  
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
