--- a/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
@@ -60,18 +60,18 @@
                         <a href="/Index" class="nav-item nav-link active">Home</a>
                         <a href="/HomePages/About" class="nav-item nav-link">About</a>
                         <a href="/HomePages/Service" class="nav-item nav-link">Service</a>
-                        <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a>
+                        @* <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a> *@
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
                             <div class="dropdown-menu m-0">
-                                <a href="/HomePages/Booking" class="dropdown-item">Booking</a>
-                                <a href="/HomePages/OurTeam" class="dropdown-item">Our Team</a>
-                                <a href="/HomePages/Testimonial" class="dropdown-item">Testimonial</a>
+                                <a href="/HomePages/Service" class="dropdown-item">Pizza</a>
+                                <a href="#" class="dropdown-item">Burger</a>
+                                <a href="#" class="dropdown-item">Zinger Burger</a>
                             </div>
                         </div>
                         <a href="/HomePages/Contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Place Order</a>
                 </div>
             </nav>
 
@@ -100,16 +100,16 @@
                     <div class="col-12">
                         <div class="row gy-4">
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Booking</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>book@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Whatsapp</h5>
+                                <p><i class="fab fa-whatsapp text-primary me-2"></i>123456789</p>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">General</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Telephone</h5>
+                                <p><i class="fas fa-phone-alt text-primary me-2"></i>123456789</p>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Technical</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>tech@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Email</h5>
+                                <p><i class="fas fa-envelope text-primary me-2"></i>tech@example.com</p>
                             </div>
                         </div>
                     </div>
@@ -121,37 +121,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                            <form>
-                                <div class="row g-3">
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">Your Name</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                            <label for="subject">Subject</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                            <label for="message">Message</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                    </div>
-                                </div>
-                            </form>
+                            <img src="~/img/location.jpg" alt="Location" width="550" height="400">
                         </div>
                     </div>
                 </div>
