--- a/BBWebProject/BBWebProject/Pages/HomePages/Testimonial.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Testimonial.cshtml
@@ -60,18 +60,18 @@
                         <a href="/Index" class="nav-item nav-link active">Home</a>
                         <a href="/HomePages/About" class="nav-item nav-link">About</a>
                         <a href="/HomePages/Service" class="nav-item nav-link">Service</a>
-                        <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a>
+                        @* <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a> *@
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
                             <div class="dropdown-menu m-0">
-                                <a href="/HomePages/Booking" class="dropdown-item">Booking</a>
-                                <a href="/HomePages/OurTeam" class="dropdown-item">Our Team</a>
-                                <a href="/HomePages/Testimonial" class="dropdown-item">Testimonial</a>
+                                <a href="/HomePages/Service" class="dropdown-item">Pizza</a>
+                                <a href="#" class="dropdown-item">Burger</a>
+                                <a href="#" class="dropdown-item">Zinger Burger</a>
                             </div>
                         </div>
                         <a href="/HomePages/Contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Place Order</a>
                 </div>
             </nav>
 
