Update Connection String

--- a/BBWebProject/BBWebProject/Pages/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Index.cshtml
@@ -34,6 +34,20 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
+
+
+    <style>
+        .color {
+            padding: 10px; /* Adjust padding as needed */
+        }
+
+            .color img {
+             height:300px;
+             width:100px;
+            }
+
+      
+    </style>
 </head>
 
 <body>
@@ -49,8 +63,9 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Restoran</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                    <div class="color">
+                        <img src="~/img/bar_and_bite.png" alt="Bar and Bite Image">
+                    </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
