--- a/BBWebProject/BBWebProject/Pages/HomePages/About.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/About.cshtml
@@ -34,6 +34,11 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
+    <style>
+        .container-xxl .text-primary {
+            color: rgb(213, 16, 22);
+        }
+    </style>
 </head>
 
 <body>
@@ -75,18 +80,19 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-dark hero-header mb-5">
+            <div class="container-xxl py-5 bg-dark text-primary hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown" >About Us</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                            <li><a href="#" >Home</a></li>
+                            <li><a href ="#">Pages</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page" >About</li>
                         </ol>
                     </nav>
                 </div>
             </div>
+
         </div>
         <!-- Navbar & Hero End -->
         <!-- About Start -->
