--- a/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
@@ -60,14 +60,14 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Items</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <h6 class="collapse-header">Custom Items:</h6>
+                        <a class="collapse-item" asp-page="/Issues/Items/AddItem">Add Items</a>
+                        <a class="collapse-item" asp-page="/Issues/Items/Index">Items Detail</a>
                     </div>
                 </div>
             </li>
