--- a/BBWebProject/BBWebProject/Pages/Issues/Testimonials/UpdateTestimonials.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Testimonials/UpdateTestimonials.cshtml
@@ -61,20 +61,20 @@
                     <h2 class="text-center mb-4">Update Testimonials</h2>
                     <form method="post" asp-page-handler="Update" enctype="multipart/form-data">
                         <div class="form-group">
-                            <label asp-for="@Model.testimonial.Name">Title</label>
-                            <input asp-for="@Model.testimonial.Name" class="form-control" placeholder="Enter title">
+                            <label asp-for="@Model.testimonial.Name">Name</label>
+                            <input asp-for="@Model.testimonial.Name" class="form-control" placeholder="Enter Name">
                             <input asp-for="@Model.testimonial.ID" type="hidden" />
                             <input asp-for="@Model.testimonial.Image" type="hidden" />
                             <span class="text-danger" asp-validation-for="@Model.testimonial.Name"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="@Model.testimonial.Profession">Description</label>
-                            <textarea class="form-control" asp-for="@Model.testimonial.Profession" rows="3" placeholder="Enter description"></textarea>
+                            <label asp-for="@Model.testimonial.Profession">Profession</label>
+                            <textarea class="form-control" asp-for="@Model.testimonial.Profession" rows="3" placeholder="Enter Profession"></textarea>
                             <span class="text-danger" asp-validation-for="@Model.testimonial.Profession"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="@Model.testimonial.Review">Price</label>
-                            <input asp-for="@Model.testimonial.Review" class="form-control" id="price" placeholder="Enter price">
+                            <label asp-for="@Model.testimonial.Review">Review</label>
+                            <input asp-for="@Model.testimonial.Review" class="form-control" id="price" placeholder="Enter Review">
                             <span class="text-danger" asp-validation-for="@Model.testimonial.Review"></span>
                         </div>
                         <div class="form-group">
