--- a/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
@@ -71,6 +71,20 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
+                   aria-expanded="true" aria-controls="collapseThree">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Testimonials</span>
+                </a>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Testimonials:</h6>
+                        <a class="collapse-item" asp-page="/Issues/Testimonials/AddTestimonials">Add Testimonials</a>
+                        <a class="collapse-item" asp-page="/Issues/Testimonials/Index">Testimonials Detail</a>
+                    </div>
+                </div>
+            </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
