--- a/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
@@ -66,8 +66,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Items:</h6>
-                        <a class="collapse-item" asp-page="/Issues/Items/AddItem">Add Items</a>
-                        <a class="collapse-item" asp-page="/Issues/Items/Index">Items Detail</a>
+                        <a class="collapse-item" asp-page="/Issues/NonVariatedItems/AddItem">Add Items</a>
+                        <a class="collapse-item" asp-page="/Issues/NonVariatedItems/Index">Items Detail</a>
                     </div>
                 </div>
             </li>
