--- a/BBWebProject/BBWebProject/Pages/Issues/Chiefs/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Chiefs/Index.cshtml
@@ -2,6 +2,117 @@
 @model BBWebProject.Pages.Issues.Chiefs.IndexModel
 @{
 }
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <title>Professional Table Example</title>
+
+    <style>
+        .container {
+            margin-top: 100px;
+            border: 2px solid rgba(0, 0, 0, 0.15);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 1000px;
+        }
+
+        .red {
+            background-color: #4E73DF;
+        }
+
+        .table-hover tbody tr:hover {
+            background-color: rgba(135, 207, 235, 0.432);
+        }
+
+        img {
+            width: 50px;
+        }
+
+        button {
+            margin-left: 5px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h2 class="mt-2 mb-4">Items Detail</h2>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead class="red">
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">FaceBook Link</th>
+                        <th scope="col">Instagram Link</th>
+                        <th scope="col">Twitter Link</th>
+                        <th scope="col">Image</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.chiefs)
+                    {
+                        <tr>
+                            <td>@item.Name</td>
+                            <td>@item.Designation</td>
+                            <td>@item.Facebook</td>
+                            <td>@item.Instagram</td>
+                            <td>@item.Twitter</td>
+                            <td>
+                                <img src="~/images/@item.Image" alt="@item.Image">
+                            </td>
+                            <td>
+                                <a asp-page="/Issues/Chiefs/UpdateChief" asp-route-id="@item.Id" class="btn btn-sm btn-primary"><i class="fas fa-edit"></i></a>
+                                <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
+                                    <button type="submit" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
+                                </form>
+                            </td>
+                            @* <td class="circle-img"><img src="~/images/@item.Image" alt="@item.Image"></td>
+                            <td>
+                                <a asp-page="/Issues/Chiefs/UpdateChief" asp-route-id="@item.Id" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i> Edit</a>
+                                <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
+                                    <button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i> Delete</button>
+                                </form>
+                            </td> *@
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+</body>
+
+</html>
+`
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
