--- a/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
@@ -85,6 +85,34 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsefour"
+                   aria-expanded="true" aria-controls="collapsefour">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Chief</span>
+                </a>
+                <div id="collapsefour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Chiefs:</h6>
+                        <a class="collapse-item" asp-page="/Issues/Chiefs/AddChief">Add Chief</a>
+                        <a class="collapse-item" asp-page="/Issues/Chiefs/Index">Chief Detail</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsefive"
+                   aria-expanded="true" aria-controls="collapsefive">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Profile</span>
+                </a>
+                <div id="collapsefive" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Profiles:</h6>
+                        <a class="collapse-item" asp-page="/Issues/Profiles/AddProfiles">Add Profile</a>
+                        <a class="collapse-item" asp-page="/Issues/Profiles/Index">Profile Detail</a>
+                    </div>
+                </div>
+            </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
