--- a/BBWebProject/BBWebProject/Pages/Issues/Chiefs/UpdateChief.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Chiefs/UpdateChief.cshtml
@@ -8,27 +8,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Chief Form</title>
+    <title>Update Chief Form</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom styling for form */
-        .form-container {
-            background-color: #e3f2fd; /* Light blue background */
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        /* Custom styling for form elements */
-        .form-control {
-            background-color: #fff; /* White background */
-        }
-
-            .form-control:focus {
-                border-color: #03a9f4; /* Focus color - Sky blue */
-                box-shadow: 0 0 0 0.2rem rgba(3, 169, 244, 0.25);
-            }
-
         .btn-container {
             text-align: right;
             margin-top: 20px;
@@ -58,7 +41,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="form-container">
-                    <h2 class="text-center mb-4">Add Chief Details</h2>
+                    <h2 class="text-center mb-4">Update Chief Details</h2>
                     <form method="post" asp-page-handler="Update" enctype="multipart/form-data">
                         <div class="form-group">
                             <label asp-for="@Model.chief.Name">Title</label>
