--- a/BBWebProject/BBWebProject/Pages/Issues/Profiles/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Profiles/Index.cshtml
@@ -2,3 +2,77 @@
 @model BBWebProject.Pages.Issues.Profiles.IndexModel
 @{
 }
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Profile Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <style>
+        .container {
+            margin-top: 10px;
+        }
+
+        img {
+            width: 50px;
+            height: 50px;
+        }
+
+        #fix {
+            width: 120px;
+            display: flex;
+            justify-content: space-between;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h2 class="text-left">Profile Detail</h2>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Address</th>
+                    <th scope="col">Phone Number</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Facebook</th>
+                    <th scope="col">Instagram</th>
+                    <th scope="col">Youtube</th>
+                    <th scope="col">Twitter</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.profiles)
+                {
+                    <tr>
+                        <td>@item.Address</td>
+                        <td>@item.PhoneNumber</td>
+                        <td>@item.Email</td>
+                        <td>@item.Facebook</td>
+                        <td>@item.Instagram</td>
+                        <td>@item.Youtube</td>
+                        <td>@item.Twitter</td>
+                        <td id="fix">
+                            <a asp-page="/Issues/Profiles/UpdateProfiles" asp-route-id="@item.Id" class="btn btn-md btn-primary"><i class="fas fa-edit"></i></a>
+                            <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
+                                <button type="submit" class="btn btn-md btn-danger"><i class="fas fa-trash"></i></button>
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+</body>
+
+</html>
