--- a/BBWebProject/BBWebProject/Pages/Issues/Chiefs/UpdateChief.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Chiefs/UpdateChief.cshtml
@@ -33,6 +33,10 @@
         .text-danger {
             color: #dc3545; /* Red color for error messages */
         }
+
+        .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+            background-color: white;
+        }
     </style>
 </head>
 
