--- a/BBWebProject/BBWebProject/Pages/Issues/Testimonials/AddTestimonials.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Testimonials/AddTestimonials.cshtml
@@ -14,7 +14,7 @@
     <style>
         /* Custom styling for form */
         .form-container {
-            background-color: #e3f2fd; /* Light blue background */
+          
             padding: 20px;
             border-radius: 10px;
         }
@@ -49,6 +49,10 @@
 
         .text-danger {
             color: #dc3545; /* Red color for error messages */
+        }
+
+        .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+            background-color: white;
         }
     </style>
 </head>
