--- a/BBWebProject/BBWebProject/Pages/Issues/VariatedItems/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/VariatedItems/Index.cshtml
@@ -1,15 +1,14 @@
 ﻿@page
-@model BBWebProject.Pages.Issues.Items.IndexModel
+@model BBWebProject.Pages.Issues.VariatedItems.IndexModel
 @{
 }
-
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chief Details</title>
+    <title>Variated Items Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Font Awesome CSS -->
@@ -30,38 +29,42 @@
             display: flex;
             justify-content: space-between;
             padding:20px;
-            
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h2 class="text-left">Items Detail</h2>
+        <h2 class="text-left">Variated Items Detail</h2>
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th>Image</th>
-                    <th>Action</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Regular</th>
+                    <th scope="col">Large</th>
+                    <th scope="col">Medium</th>
+                    <th scope="col">Small</th>
+                    <th scope="col">Image</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.items)
+                @foreach (var item in Model.variateditems)
                 {
                     <tr>
                         <td>@item.Title</td>
                         <td>@item.Description</td>
-                        <td>@item.Price</td>
+                        <td>@item.Regular</td>
+                        <td>@item.Large</td>
+                        <td>@item.Medium</td>
+                        <td>@item.Small</td>
                         <td>
-                        
-                        <img src="~/images/@item.Image" alt="@item.Image" >
+                            <img src="~/images/@item.Image" alt="@item.Image">
                         </td>
                         <td id="fix">
-                            <a asp-page="/Issues/NonVariatedItems/UpdateItem" asp-route-id="@item.Id" class="btn btn-md btn-primary mr-2"><i class="fas fa-edit"></i></a>
-                            <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
+                            <a asp-page="/Issues/VariatedItems/UpdateItems" asp-route-id="@item.ID" class="btn btn-md btn-primary mr-3"><i class="fas fa-edit"></i></a>
+                            <form method="post" asp-page-handler="Delete" asp-route-id="@item.ID">
                                 <button type="submit" class="btn btn-md btn-danger"><i class="fas fa-trash"></i></button>
                             </form>
                         </td>
